cluster/apps/default/prowlarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      nodeSelector:
        location: cgn
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.0.5
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
