cluster/apps/default/prowlarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  ports:
    - port: 9696
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: prowlarr
